--- a/R/07-estrat-tunagem-xgboost.Rmd
+++ b/R/07-estrat-tunagem-xgboost.Rmd
@@ -43,6 +43,9 @@ telco_recipe <- recipe(Churn ~ ., telco_train) %>%
     step_center(all_numeric()) %>% 
     step_scale(all_numeric()) %>% 
     step_dummy(all_nominal(), -all_outcomes())
+
+telco_recipe
+
 ```
 
 
