--- a/R/07-estrat-tunagem-xgboost.Rmd
+++ b/R/07-estrat-tunagem-xgboost.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "XGBoost"
+title: "XGBoost - Estratégia de Tunagem"
 author: "Athos"
 date: "09/07/2020"
 output: html_document
@@ -12,9 +12,6 @@ library(tidymodels)
 # library(doParallel)
 cores = 1
 ```
-
-## R Markdown
-
 
 ```{r cars}
 telco <- readr::read_csv("https://raw.githubusercontent.com/curso-r/intro-ml-mestre/master/dados/telco.csv")
@@ -39,13 +36,12 @@ telco_test <- testing(telco_initial_split)
 
 ```{r}
 telco_recipe <- recipe(Churn ~ ., telco_train) %>% 
-    step_meanimpute(TotalCharges) %>% 
-    step_center(all_numeric()) %>% 
-    step_scale(all_numeric()) %>% 
-    step_dummy(all_nominal(), -all_outcomes())
+  step_meanimpute(TotalCharges) %>% 
+  step_center(all_numeric()) %>% 
+  step_scale(all_numeric()) %>% 
+  step_dummy(all_nominal(), -all_outcomes())
 
 telco_recipe
-
 ```
 
 
